--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,14 +17,14 @@
 }
 #Q2{
 	position: absolute;
-	top: 200%;
+	top: 500%;
 }
 #Q3{
 	position: absolute;
 	top: 300%;
 }
 
-#fechados{
+#situacoes_linha{
 	position: absolute;
 	top: 400%;
 }
