--- a/static/css/style.css
+++ b/static/css/style.css
@@ -74,3 +74,37 @@
   stroke: black;
   stroke-linejoin: round;
 }
+
+
+
+.info {
+	padding: 6px 8px;
+	font: 14px/16px Arial, Helvetica, sans-serif;
+	background: white;
+	background: rgba(255,255,255,0.8);
+	box-shadow: 0 0 15px rgba(0,0,0,0.2);
+	border-radius: 5px;
+	overflow:hidden;
+	width: fit-content;
+	position: absolute;
+	top: 0;
+	right: 0;
+}
+.info h4 {
+	margin: 0 0 5px;
+	color: #777;
+}
+
+.legend {
+	text-align: left;
+	line-height: 20px;
+	color: #555;
+	overflow:hidden;
+}
+.legend i {
+	width: 20px;
+	height: 20px;
+	float: left;
+	margin-right: 8px;
+	opacity: 0.7;
+}
