--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,8 @@
+#legend_graph{
+	position: absolute;
+	top: 0%;
+	left: 0%;
+}
 .container{
 	margin: 0;
 }
@@ -28,7 +33,13 @@
 #tooltip.hidden {
   display: none;
 }
-
+#rede{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	left: 0%;
+	top:0%;
+}
 #tooltip p {
   margin: 0;
   font-family: sans-serif;
