--- a/static/css/style.css
+++ b/static/css/style.css
@@ -89,8 +89,76 @@
 	
 }
 
-#filter_situa{
+
+
+.reset{
+	position:fixed;
+	bottom:0%;
+	left:0%;
+	z-index: 1000;
+	moz-border-radius: 8px 8px 8px 8px;
+	-webkit-border-radius: 8px 8px 8px 8px;
+	moz-box-shadow:2px 2px 5px #000000;
+	-webkit-box-shadow:2px 2px 5px #000000;
+	background-color: #fc4137;
+	color: white;
+	padding: 2px 2px 2px 2px;
+}
+
+
+.buttom_control:hover {
+	cursor: pointer;
+}
+
+.filtro_buttom{
+	moz-border-radius: 30px 30px 30px 30px;
+	-webkit-border-radius: 30px 30px 30px 30px;
+	/**
+	moz-box-shadow:2px 2px 5px #000000;
+	-webkit-box-shadow:2px 2px 5px #000000;
+	**/
+	background-color: #000000;
+	z-index: 80;
+	height: 40px;
+	width: 40px;
 	position: absolute;
 	top: 0%;
 	right: 0%;
+	text-align: center;
+	margin-right: 10px;
+	opacity: 0.6;
+    filter: alpha(opacity=60); /* For IE8 and earlier */
+}
+
+
+.filtro_buttom img{
+	margin: 8px;
+	height: 25px;
+	width: 25px;
+}
+
+.filtro_buttom:hover {
+	cursor: pointer;
+	opacity: 1;
+    filter: alpha(opacity=100); /* For IE8 and earlier */	
+}
+
+.filtro {
+	display: none;
+	moz-border-radius: 5px 5px 5px 5px;
+	-webkit-border-radius: 5px 5px 5px 5px;
+	border: 1px solid #606060;
+	width: auto;
+	height: auto;
+	position: absolute;
+	right: 0%;
+	top: 0%;
+	margin-right: 20px;
+	padding: 5px 30px 5px 5px;
+	background-color: white;
+	color: black;
+	margin-top: 10px;
+}
+.filtro div{
+	float:left;
 }
