--- a/static/css/style.css
+++ b/static/css/style.css
@@ -102,7 +102,9 @@
 	-webkit-box-shadow:2px 2px 5px #000000;
 	background-color: #fc4137;
 	color: white;
-	padding: 2px 2px 2px 2px;
+	padding: 5px 5px 5px 5px;
+	margin-bottom: 10px;
+	margin-left: 10px;
 }
 
 
@@ -159,6 +161,7 @@
 	color: black;
 	margin-top: 10px;
 }
-.filtro div{
-	float:left;
+
+#main{
+	margin-top: 10px;
 }
