--- a/static/css/style_menu.css
+++ b/static/css/style_menu.css
@@ -23,11 +23,11 @@
     margin-left: 0.25%;
     top: 0px;
     z-index: 1;
-    height: 40px;
-    width: 40px;
+    height: 25px;
+    width: 25px;
     position: absolute;
     background-color: #000;
-    opacity: 0.6;
+    
 }
 
 div#Q11 {
@@ -52,13 +52,21 @@ div#Q3 {
     position: fixed;
     top: 2.5%;
     left: 10px;
-    width: 26px;
-    height: 6px;
+    width: 15px;
+    height: 3px;
     cursor: pointer;
     z-index: 1;
 }
 
-.menu__btn > span,
+.menu__btn > span{
+  display: block;
+  position: absolute;
+
+  width: 100%;
+  height: 2px;
+
+  background-color: #fff;
+}
 .menu__btn > span::before,
 .menu__btn > span::after {
   display: block;
@@ -67,7 +75,7 @@ div#Q3 {
   width: 100%;
   height: 2px;
 
-  background-color: #fff;
+  background-color: #212529;
 
   transition-duration: .25s;
 }
