--- a/static/css/style_menu.css
+++ b/static/css/style_menu.css
@@ -52,21 +52,13 @@ div#Q3 {
     position: fixed;
     top: 2.5%;
     left: 10px;
-    width: 15px;
-    height: 3px;
+    width: 12px;
+    height: 1px;
     cursor: pointer;
     z-index: 1;
 }
 
-.menu__btn > span{
-  display: block;
-  position: absolute;
-
-  width: 100%;
-  height: 2px;
-
-  background-color: #fff;
-}
+.menu__btn > span,
 .menu__btn > span::before,
 .menu__btn > span::after {
   display: block;
@@ -75,7 +67,7 @@ div#Q3 {
   width: 100%;
   height: 2px;
 
-  background-color: #212529;
+  background-color: #6c757d;
 
   transition-duration: .25s;
 }
