--- a/static/css/style_menu.css
+++ b/static/css/style_menu.css
@@ -25,7 +25,7 @@
     z-index: 1;
     height: 25px;
     width: 25px;
-    position: absolute;
+    position: fixed;
     background-color: #000;
     
 }
