--- a/static/css/style2.css
+++ b/static/css/style2.css
@@ -825,8 +825,25 @@ section {
   font-size: 13px;
 }
 
-button.btn.btn-outline-primary {
-    margin-top: 55%;
-    margin-left: 70%;
+.col-lg-3.text-center.padding.wow.fadeIn {
+    width: 33.33%;
 }
 
+div#resize-ind {
+  width: 33.33%
+}
+
+div#mains {
+  text-align: center;
+}
+
+div#bt-main {
+  margin-left: 33.33%;
+}
+
+.img-fluid {
+    margin-left: 25%;
+    width: 75%;
+    max-width: 100%;
+    height: auto;
+}
